@startuml
Entity01 }|..|| Entity02
Entity03 }o..o| Entity04
Entity05 ||--o{ Entity06
Entity07 ||--|| Entity08

entity WindowApp {
    + kadastrNumber: varchar(60)
    + personalAddress: varchar
    + personalAccount: varchar

    + square: int
    + emailCounter: int
    + personalID: int
    + createDate: DateTime
    + uploadDate: DateTime
    + create: timestamp
    + update: timestamp
}
entity DebtorList{
    + ownerName: varchar
    + payerName: varchar
    + accruedMoney: int
    + returnedMoney: int
    + create: timestamp
    + update: timestamp
    + kadastr: Boolean

}
entity CSVReader{
    + pathname: varchar
    + csvFile: File
    + words: Array
    + lines: Array
}
entity SeleniumParser{
   + driver: Integer
   + srcDstFiles: varchar
}
entity IncomingEmails{
    +  emailAddress: varchar
    +  emailSender: varchar
    +  emailReceiver: varchar
    + create: timestamp
    + update: timestamp
}
entity BigCSVCutter{
   +  countLine: Integer
   +  countFile: Integer
   +  date: DateTime
   +  dateStr: varchar
   +  folder: File
   +  created: Boolean
}
entity WithKadastrList{
   +  source: varchar
   + destination: varchar
    +  createdTime: DateTime
    + create: timestamp
    + update: timestamp
}

WindowApp ||--|| SeleniumParser
WindowApp ||--|| CSVReader
WindowApp ||--|| DebtorList
WindowApp ||--|| IncomingEmails
WindowApp ||--|| BigCSVCutter
CSVReader ||--|| BigCSVCutter
IncomingEmails ||--|| WithKadastrList
@enduml